@@ -22,6 +22,8 @@
 	- fix: ftpAbort must close the data channel to read abort status.
 	- perform glob on remote ftp install args.
 	- fix: reload macros from cmd line when re-reading config files.
+	- fix: compressFileList was over-generating dirNames.
+	- fix: alAddPackage sorted dirNames too soon, destroying dirMapping.
 
 3.0.2 -> 3.0.3
 	- add --eval to find result of macro expansion.
